# buildyourclassroom

./: .dockerignore  .gitignore  CLAUDE.md  Hackathon.slnx  deploy.sh  dydo.json  readme.md
src/microservices/microservice/: pyproject.toml  run.py
src/microservices/microservice/api/: main.py
src/microservices/microservice/api/models/: emotion_orm.py  emotion_schemas.py
src/microservices/microservice/api/models/agenda/: __init__.py  agenda_section.py  energizer_element.py  game_challenge_element.py  generate_agenda_request.py  generate_agenda_response.py  group_activity_element.py  individual_support_element.py  lecture_element.py  lesson_agenda.py  lesson_element_type.py  (+1 more)
src/microservices/microservice/api/routes/: agenda.py  assessment.py  emotion.py  simulation.py
src/microservices/microservice/services/: agenda_generator.py  assessment_generator.py  classroom_simulation.py  emotion_analyzer.py  emotion_repository.py  transcription_service.py
src/microservices/microservice/shared/: database.py
src/microservices/microservice/tests/: conftest.py  test_agenda_generator.py  test_agenda_models.py  test_agenda_routes.py  test_assessment_generator.py  test_assessment_models.py  test_assessment_routes.py  test_database.py  test_emotion_analyzer.py  test_emotion_routes.py  test_health.py  test_simulation_models.py  test_simulation_routes.py  test_simulation_service.py
src/microservices/microservice/tests/workers/: conftest.py  test_analyze_snapshot_worker.py
src/microservices/microservice/workers/: add_numbers_worker.py  analyze_snapshot_worker.py
(+444 files in other folders)
