[project]
name = "microservice"
version = "0.1.0"
description = "Hackathon Python microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pika>=1.3.0",
    "deepface>=0.0.93",
    "tf-keras>=2.20.0",
    "opencv-python-headless>=4.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "openai>=1.14.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "services", "shared", "workers"]
branch = true

[tool.coverage.xml]
output = "../../../tests/coverage/microservices/coverage.xml"

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
